--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "~4.16.0",
     "helmet": "^3.21.2",
     "http-errors": "~1.6.2",
+    "ioredis": "^4.14.1",
     "morgan": "~1.9.0"
   },
   "devDependencies": {
