Integration with redis

--- a/src/config/.env.dev
+++ b/src/config/.env.dev
@@ -3,7 +3,11 @@ HTTPSPORT=443
 SSLKEY=/path/to/ssl/key
 SSLCERT=/path/to/ssl/cert
 
-DICTIONARY_STATS_BASE_URL=http://localhost:3003
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_MAXMEMORY=10485760
+
+DICTIONARY_STATS_BASE_URL=http://23.100.29.240
 DICTIONARY_MISSING_SIGNS_URL=/dictionary/stats?region=BR&available=false&limit=100&sort=descending
 
 WIKILIBRAS_BASE_URL=http://150.165.204.143
@@ -16,4 +20,5 @@ WIKILIBRAS_TASK_USER_URL=/user-task
 WIKILIBRAS_USER_EMAIL=vlibras@example.com
 WIKILIBRAS_PASSWORD=vlibras0002
 
-SIGNS_SUGGESTION_INTERVAL=3600000
+#SIGNS_SUGGESTION_INTERVAL=3600000
+SIGNS_SUGGESTION_INTERVAL=300000
