--- a/src/config/.env.production
+++ b/src/config/.env.production
@@ -1,19 +1,60 @@
+############################ SERVER CONFIGURATION #############################
+#
+# Ports on which HTTP and HTTPS servers will listen.
+# If no port is provided, the server will automatically select the default http
+# and https ports.
+#
+# NOTE: You must specify the SSL certificate and key paths to properly start the
+# https server.
+
 HTTPPORT=80
 HTTPSPORT=443
-SSLKEY=/path/to/ssl/key
-SSLCERT=/path/to/ssl/cert
 
-DICTIONARY_STATS_BASE_URL=http://localhost:3003
+SSLKEY=<empty>
+SSLCERT=<empty>
+
+############################# REDIS CONFIGURATION #############################
+#
+# Server communication settings with Redis.
+# By default, this file configures the server to connect to the Redis using the
+# default settings. The Redis is set to a max size of 10MB.
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_MAXMEMORY=10485760
+
+####################### SIGNS SUGGESTOR CONFIGURATION #########################
+#
+# Dictionary Stats and Wikilibras routes.
+# Configuration of hosts and communication routes with Dictionary Stats and
+# Wikilibras services.
+
+DICTIONARY_STATS_BASE_URL=<empty>
 DICTIONARY_MISSING_SIGNS_URL=/dictionary/stats?region=BR&available=false&limit=100&sort=descending
 
-WIKILIBRAS_BASE_URL=http://150.165.204.143
+WIKILIBRAS_BASE_URL=<empty>
 WIKILIBRAS_AUTHENTICATON_URL=/auth
 WIKILIBRAS_WHOAMI_URL=/whoami
 WIKILIBRAS_NEWTASK_URL=/new-task
 WIKILIBRAS_NEWACTION_URL=/new-action
 WIKILIBRAS_TASK_USER_URL=/user-task
 
-WIKILIBRAS_USER_EMAIL=vlibras@example.com
-WIKILIBRAS_PASSWORD=vlibras0002
+WIKILIBRAS_USER_EMAIL=<empty>
+WIKILIBRAS_PASSWORD=<empty>
 
+# Interval at which requests are made to services.
 SIGNS_SUGGESTION_INTERVAL=3600000
+
+######################### SIGNS BUILDER CONFIGURATION #########################
+#
+# Unity3D command line and parameters for Bundle generation.
+# The generation is done in two steps, BuildFromBlend that generates a .fbx
+# file and BuildFromFBX that generates a Bundle file.
+
+UNITY_CMD=unity3d -quit -batchmode
+FBX_BUILD_PARAM=-executeMethod BlendToBundlesConverter.BuildFromBlend
+BUNDLE_BUILD_PARAM=-executeMethod BlendToBundlesConverter.BuildFromFBX
+
+# Interval at which Bundles are built.
+SIGNS_BUILD_INTERVAL=3600000
+SIGNS_BUILD_TIMEOUT=300000
