Adding production run script

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "scripts": {
     "build": "babel src --out-dir dist --copy-files --include-dotfiles",
+    "production": "DEBUG=vlibras-dictionary-*:* NODE_ENV=production node dist/index.js",
     "dev": "npm run build && DEBUG=vlibras-dictionary-*:* NODE_ENV=dev node dist/index.js"
   }
 }
