Download .blend from wikilibras implementation

--- a/src/config/.env.production
+++ b/src/config/.env.production
@@ -37,10 +37,14 @@ WIKILIBRAS_AUTHENTICATON_URL=/auth
 WIKILIBRAS_WHOAMI_URL=/whoami
 WIKILIBRAS_NEWTASK_URL=/new-task
 WIKILIBRAS_NEWACTION_URL=/new-action
-WIKILIBRAS_TASK_USER_URL=/user-task
+WIKILIBRAS_PUBLISHTASKS_URL=/publish-tasks
+WIKILIBRAS_USER_TASK_URL=/user-task
 
-WIKILIBRAS_USER_EMAIL=<empty>
-WIKILIBRAS_PASSWORD=<empty>
+WIKILIBRAS_SUGESTOR_EMAIL=<empty>
+WIKILIBRAS_SUGESTOR_PASSWORD=<empty>
+
+WIKILIBRAS_PUBLISHER_EMAIL=<empty>
+WIKILIBRAS_PUBLISHER_PASSWORD=<empty>
 
 # Interval at which requests are made to services.
 SIGNS_SUGGESTION_INTERVAL=3600000
