--- a/src/config/.env.dev
+++ b/src/config/.env.dev
@@ -23,7 +23,7 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_MAXMEMORY=10485760
 
-####################### SIGNS SUGGESTOR CONFIGURATION #########################
+####################### WIKILIBRAS SIGNS CONFIGURATION ########################
 #
 # Dictionary Stats and Wikilibras routes.
 # Configuration of hosts and communication routes with Dictionary Stats and
@@ -32,24 +32,35 @@ REDIS_MAXMEMORY=10485760
 DICTIONARY_STATS_BASE_URL=http://23.100.29.240
 DICTIONARY_MISSING_SIGNS_URL=/dictionary/stats?region=BR&available=false&limit=100&sort=descending
 
-WIKILIBRAS_BASE_URL=http://150.165.204.143
+WIKILIBRAS_BASE_URL=http://150.165.204.124
 WIKILIBRAS_AUTHENTICATON_URL=/auth
 WIKILIBRAS_WHOAMI_URL=/whoami
 WIKILIBRAS_NEWTASK_URL=/new-task
 WIKILIBRAS_NEWACTION_URL=/new-action
-WIKILIBRAS_TASK_USER_URL=/user-task
+WIKILIBRAS_USER_TASK_URL=/user-task
+WIKILIBRAS_AVAILABLE_TASKS_URL=/available-tasks
+WIKILIBRAS_PENDING_TASKS_URL=/pending-tasks
+WIKILIBRAS_TASK_HISTORY_URL=/action-task-history
+WIKILIBRAS_OBJECT_URL=/object-action
+WIKILIBRAS_DOWNLOAD_URL=/download
 
-WIKILIBRAS_USER_EMAIL=vlibras@example.com
-WIKILIBRAS_PASSWORD=vlibras0002
+WIKILIBRAS_SUGGESTOR_EMAIL=vlibras@example.com
+WIKILIBRAS_SUGGESTOR_PASSWORD=vlibras0002
+
+WIKILIBRAS_PUBLISHER_EMAIL=publisher@example.com
+WIKILIBRAS_PUBLISHER_PASSWORD=publisher0004
 
 # Interval at which requests are made to services.
-SIGNS_SUGGESTION_INTERVAL=3600000
+#SIGNS_SUGGESTION_INTERVAL=3600000
+SIGNS_SUGGESTION_INTERVAL=1000
 
 ######################### SIGNS BUILDER CONFIGURATION #########################
 #
 # Unity3D command line and parameters for Bundle generation.
 # The generation is done in two steps, BuildFromBlend that generates a .fbx
 # file and BuildFromFBX that generates a Bundle file.
+
+BLEND_FILES_TMP_DIR=/tmp/vlibras/blends
 
 UNITY_CMD=unity3d -quit -batchmode
 FBX_BUILD_PARAM=-executeMethod BlendToBundlesConverter.BuildFromBlend
