--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "compression": "^1.7.4",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
+    "cron": "^1.7.2",
     "debug": "~2.6.9",
     "dotenv": "^6.2.0",
     "express": "~4.16.0",
