--- a/src/config/.env.dev
+++ b/src/config/.env.dev
@@ -52,7 +52,9 @@ WIKILIBRAS_PUBLISHER_PASSWORD=publisher0004
 
 # Interval at which requests are made to services.
 #SIGNS_SUGGESTION_INTERVAL=3600000
-SIGNS_SUGGESTION_INTERVAL=1000
+#SIGNS_SUGGESTION_INTERVAL=1000
+#CRON_SIGNS_SUGGESTION_INTERVAL=* */1 * * *
+CRON_SIGNS_SUGGESTION_INTERVAL=*/3 * * * * *
 
 ######################### SIGNS BUILDER CONFIGURATION #########################
 #
@@ -67,5 +69,6 @@ FBX_BUILD_PARAM=-executeMethod BlendToBundlesConverter.BuildFromBlend
 BUNDLE_BUILD_PARAM=-executeMethod BlendToBundlesConverter.BuildFromFBX
 
 # Interval at which Bundles are built.
-SIGNS_BUILD_INTERVAL=3600000
+#SIGNS_BUILD_INTERVAL=3600000
+CRON_SIGNS_BUILD_INTERVAL=* */1 * * *
 SIGNS_BUILD_TIMEOUT=300000
