--- a/src/config/.env.dev
+++ b/src/config/.env.dev
@@ -53,8 +53,8 @@ WIKILIBRAS_PUBLISHER_PASSWORD=publisher0004
 # Interval at which requests are made to services.
 #SIGNS_SUGGESTION_INTERVAL=3600000
 #SIGNS_SUGGESTION_INTERVAL=1000
-#CRON_SIGNS_SUGGESTION_INTERVAL=* */1 * * *
-CRON_SIGNS_SUGGESTION_INTERVAL=*/3 * * * * *
+#CRON_SIGNS_SUGGESTION_INTERVAL=1 hour
+CRON_SIGNS_SUGGESTION_INTERVAL=1 second
 
 ######################### SIGNS BUILDER CONFIGURATION #########################
 #
@@ -70,5 +70,6 @@ BUNDLE_BUILD_PARAM=-executeMethod BlendToBundlesConverter.BuildFromFBX
 
 # Interval at which Bundles are built.
 #SIGNS_BUILD_INTERVAL=3600000
-CRON_SIGNS_BUILD_INTERVAL=* */1 * * *
+#CRON_SIGNS_BUILD_INTERVAL=1 hour
+CRON_SIGNS_BUILD_INTERVAL=10 seconds
 SIGNS_BUILD_TIMEOUT=300000
