added mongo config

--- a/src/config/.env.dev
+++ b/src/config/.env.dev
@@ -72,4 +72,11 @@ BUNDLE_BUILD_PARAM=-executeMethod BlendToBundlesConverter.BuildFromFBX
 #SIGNS_BUILD_INTERVAL=3600000
 #CRON_SIGNS_BUILD_INTERVAL=1 hour
 CRON_SIGNS_BUILD_INTERVAL=10 seconds
+
 SIGNS_BUILD_TIMEOUT=300000
+
+
+######################### MONGO CONFIGURATION #########################
+
+DATABASE=Jobs
+MONGO_CONNECTION_STRING=mongodb://127.0.0.1/
