Change: BlendToBundle class | Fix: removeAlreadyQueued

--- a/src/config/.env.dev
+++ b/src/config/.env.dev
@@ -32,7 +32,7 @@ REDIS_MAXMEMORY=10485760
 DICTIONARY_STATS_BASE_URL=http://23.100.29.240
 DICTIONARY_MISSING_SIGNS_URL=/dictionary/stats?region=BR&available=false&limit=100&sort=descending
 
-WIKILIBRAS_BASE_URL=http://150.165.204.124
+WIKILIBRAS_BASE_URL=http://127.0.0.1
 WIKILIBRAS_AUTHENTICATON_URL=/auth
 WIKILIBRAS_WHOAMI_URL=/whoami
 WIKILIBRAS_NEWTASK_URL=/new-task
@@ -54,7 +54,7 @@ WIKILIBRAS_PUBLISHER_PASSWORD=publisher0004
 #SIGNS_SUGGESTION_INTERVAL=3600000
 #SIGNS_SUGGESTION_INTERVAL=1000
 #CRON_SIGNS_SUGGESTION_INTERVAL=1 hour
-CRON_SIGNS_SUGGESTION_INTERVAL=1 second
+CRON_SIGNS_SUGGESTION_INTERVAL=1 hour
 
 ######################### SIGNS BUILDER CONFIGURATION #########################
 #
@@ -65,13 +65,14 @@ CRON_SIGNS_SUGGESTION_INTERVAL=1 second
 BLEND_FILES_TMP_DIR=/tmp/vlibras/blends
 
 UNITY_CMD=unity3d -quit -batchmode
-FBX_BUILD_PARAM=-executeMethod BlendToBundlesConverter.BuildFromBlend
-BUNDLE_BUILD_PARAM=-executeMethod BlendToBundlesConverter.BuildFromFBX
+BUNDLE_BUILD_PARAM=-executeMethod BlendToBundlesConverter.BuildFromBlend
+CLEAN_TRASH_PARAM=-executeMethod BlendToBundlesConverter.cleanTrash
 
 # Interval at which Bundles are built.
 #SIGNS_BUILD_INTERVAL=3600000
 #CRON_SIGNS_BUILD_INTERVAL=1 hour
 CRON_SIGNS_BUILD_INTERVAL=10 seconds
+CRON_BUILD_BUNDLES=3 seconds
 
 SIGNS_BUILD_TIMEOUT=300000
 
@@ -79,4 +80,12 @@ SIGNS_BUILD_TIMEOUT=300000
 ######################### MONGO CONFIGURATION #########################
 
 DATABASE=Jobs
+BLEND_TO_BUNDLE_DATABASE=BlendToBundle
 MONGO_CONNECTION_STRING=mongodb://127.0.0.1/
+
+# Unity/Editor/Blends Path
+INPUT_BLEND_FOLDER=/home/joao/Unity-2018.3.0f2/Editor/Assets/Blends
+
+WIKILIBRAS_TASK_STATE_URL=/state-task
+# sudo ln -s /home/joao/Unity-2018.3.0f2/Editor/Unity /usr/bin/unity3d
+# Lembrar de escolher o caminho dos bundles no arquivo config.cs do script de Vinicius
