--- a/src/config/.env.dev
+++ b/src/config/.env.dev
@@ -29,8 +29,8 @@ REDIS_MAXMEMORY=10485760
 # Configuration of hosts and communication routes with Dictionary Stats and
 # Wikilibras services.
 
-DICTIONARY_STATS_BASE_URL=http://23.100.29.240
-DICTIONARY_MISSING_SIGNS_URL=/dictionary/stats?region=BR&available=false&limit=100&sort=descending
+DICTIONARY_STATS_BASE_URL=https://estatistica.vlibras.gov.br
+DICTIONARY_MISSING_SIGNS_URL=/dictionary/stats?region=BR&sort=descending&limit=100&available=false
 
 WIKILIBRAS_BASE_URL=http://127.0.0.1
 WIKILIBRAS_AUTHENTICATON_URL=/auth
@@ -43,6 +43,7 @@ WIKILIBRAS_PENDING_TASKS_URL=/pending-tasks
 WIKILIBRAS_TASK_HISTORY_URL=/action-task-history
 WIKILIBRAS_OBJECT_URL=/object-action
 WIKILIBRAS_DOWNLOAD_URL=/download
+WIKILIBRAS_TASK_STATE_URL=/state-task
 
 WIKILIBRAS_SUGGESTOR_EMAIL=vlibras@example.com
 WIKILIBRAS_SUGGESTOR_PASSWORD=vlibras0002
@@ -63,6 +64,7 @@ CRON_SIGNS_SUGGESTION_INTERVAL=1 hour
 # file and BuildFromFBX that generates a Bundle file.
 
 BLEND_FILES_TMP_DIR=/tmp/vlibras/blends
+INPUT_BLEND_FOLDER=/home/joao/Unity-2018.3.0f2/Editor/Assets/Blends
 
 UNITY_CMD=unity3d -quit -batchmode
 BUNDLE_BUILD_PARAM=-executeMethod BlendToBundlesConverter.BuildFromBlend
@@ -77,15 +79,13 @@ CRON_BUILD_BUNDLES=3 seconds
 SIGNS_BUILD_TIMEOUT=300000
 
 
-######################### MONGO CONFIGURATION #########################
+######################### AGENDA CONFIGURATION #########################
 
 DATABASE=Jobs
 BLEND_TO_BUNDLE_DATABASE=BlendToBundle
 MONGO_CONNECTION_STRING=mongodb://127.0.0.1/
+PROCESS_EVERY=5 seconds
 
-# Unity/Editor/Blends Path
-INPUT_BLEND_FOLDER=/home/joao/Unity-2018.3.0f2/Editor/Assets/Blends
 
-WIKILIBRAS_TASK_STATE_URL=/state-task
 # sudo ln -s /home/joao/Unity-2018.3.0f2/Editor/Unity /usr/bin/unity3d
 # Lembrar de escolher o caminho dos bundles no arquivo config.cs do script de Vinicius
