Added: StatsApiRequests and populate script

--- a/src/config/.env.dev
+++ b/src/config/.env.dev
@@ -89,3 +89,9 @@ PROCESS_EVERY=5 seconds
 
 # sudo ln -s /home/joao/Unity-2018.3.0f2/Editor/Unity /usr/bin/unity3d
 # Lembrar de escolher o caminho dos bundles no arquivo config.cs do script de Vinicius
+
+
+######################### STATS API CONFIGURATION #########################
+
+TRANSLATE_STATS_BASE_URL=http://127.0.0.1:3003
+REVIEW_STATS_URL=/review/stats
