Added redisClient to translationDaemon

--- a/src/config/.env.dev
+++ b/src/config/.env.dev
@@ -95,3 +95,4 @@ PROCESS_EVERY=5 seconds
 
 TRANSLATE_STATS_BASE_URL=http://127.0.0.1:3003
 REVIEW_STATS_URL=/review/stats
+STATS_API_QUERY=?rating=bad&review=false
