--- a/src/config/.env.dev
+++ b/src/config/.env.dev
@@ -32,7 +32,7 @@ REDIS_MAXMEMORY=10485760
 DICTIONARY_STATS_BASE_URL=https://estatistica.vlibras.gov.br
 DICTIONARY_MISSING_SIGNS_URL=/dictionary/stats?region=BR&sort=descending&limit=100&available=false
 
-WIKILIBRAS_BASE_URL=http://127.0.0.1
+WIKILIBRAS_BASE_URL=http://login-wiki.vlibras.lavid.ufpb.br:8080/
 WIKILIBRAS_AUTHENTICATON_URL=/auth
 WIKILIBRAS_WHOAMI_URL=/whoami
 WIKILIBRAS_NEWTASK_URL=/new-task
@@ -80,6 +80,7 @@ SIGNS_BUILD_TIMEOUT=300000
 
 
 ######################### AGENDA CONFIGURATION #########################
+# Settings of the library that is responsible for managing the jobs.
 
 DATABASE=Jobs
 BLEND_TO_BUNDLE_DATABASE=BlendToBundle
@@ -95,4 +96,4 @@ PROCESS_EVERY=5 seconds
 
 TRANSLATE_STATS_BASE_URL=http://127.0.0.1:3003
 REVIEW_STATS_URL=/review/stats
-STATS_API_QUERY=?rating=bad&review=false
+STATS_API_QUERY=?rating=bad
