Update signsSuggestorDaemon.js, translationSuggestorDaemon.js, and 3 more files...

--- a/src/config/.env.dev
+++ b/src/config/.env.dev
@@ -32,7 +32,8 @@ REDIS_MAXMEMORY=10485760
 DICTIONARY_STATS_BASE_URL=https://estatistica.vlibras.gov.br
 DICTIONARY_MISSING_SIGNS_URL=/dictionary/stats?region=BR&sort=descending&limit=100&available=false
 
-WIKILIBRAS_BASE_URL=http://login-wiki.vlibras.lavid.ufpb.br:8080/
+# WIKILIBRAS_BASE_URL=http://login-wiki.vlibras.lavid.ufpb.br:8080/
+WIKILIBRAS_BASE_URL=http://127.0.0.1
 WIKILIBRAS_AUTHENTICATON_URL=/auth
 WIKILIBRAS_WHOAMI_URL=/whoami
 WIKILIBRAS_NEWTASK_URL=/new-task
