--- a/package.json
+++ b/package.json
@@ -8,21 +8,16 @@
   ],
   "dependencies": {
     "@babel/runtime": "^7.6.2",
-    "agenda": "^3.0.0",
-    "axios": "^0.18.1",
     "compression": "^1.7.4",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
-    "cron": "^1.7.2",
     "debug": "~2.6.9",
     "dotenv": "^6.2.0",
     "express": "~4.16.0",
     "helmet": "^3.21.2",
     "http-errors": "~1.6.2",
-    "ioredis": "^4.14.1",
-    "lodash": "^4.17.15",
     "morgan": "~1.9.0",
-    "node-cron": "^2.0.3"
+    "sequelize": "^6.2.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.2",
