--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,7 +1,9 @@
+require('@babel/register');
+
 const path = require('path');
 
 module.exports = {
-  'config': path.resolve('src', 'config', 'database.js'),
+  'config': path.resolve('src', 'database', 'cli', 'config.js'),
   'models-path': path.resolve('src', 'models'),
   'seeders-path': path.resolve('src', 'database', 'seeders'),
   'migrations-path': path.resolve('src', 'database', 'migrations'),
