--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "Wesnydy Ribeiro <wesnydy@lavid.ufpb.br>"
   ],
   "dependencies": {
+    "@babel/node": "^7.10.5",
     "@babel/runtime": "^7.6.2",
     "compression": "^1.7.4",
     "cookie-parser": "~1.4.3",
@@ -14,6 +15,7 @@
     "debug": "~2.6.9",
     "dotenv": "^6.2.0",
     "express": "~4.16.0",
+    "fs-extra": "^9.0.1",
     "helmet": "^3.21.2",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
