--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "^7.4.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
+    "nodemon": "^2.0.7",
     "sequelize-cli": "^6.2.0"
   },
   "engines": {
@@ -44,6 +45,7 @@
     "postmigrate": "sequelize-cli db:seed:all",
     "predev": "babel src --out-dir dist --copy-files --include-dotfiles",
     "dev": "DEBUG=vlibras-dictionary-*:* NODE_ENV=development node dist/index.js",
+    "nodemon": "DEBUG=vlibras-dictionary-*:* NODE_ENV=development nodemon dist/index.js",
     "build": "babel src --out-dir dist --copy-files --include-dotfiles",
     "production": "NODE_ENV=production node dist/index.js"
   }
