--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "2.0.0",
   "private": true,
   "contributors": [
-    "Wesnydy Ribeiro <wesnydy@lavid.ufpb.br>"
+    "Wesnydy Ribeiro <wesnydy@lavid.ufpb.br>",
+    "André Pinto Araújo <andre.araujo@lavid.ufpb.br>"
   ],
   "dependencies": {
     "@babel/node": "^7.10.5",
@@ -25,15 +26,17 @@
     "sequelize": "^6.2.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.6.2",
-    "@babel/core": "^7.6.2",
+    "@babel/cli": "^7.13.16",
+    "@babel/core": "^7.14.0",
+    "@babel/node": "^7.13.13",
     "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/preset-env": "^7.6.2",
+    "@babel/preset-env": "^7.14.1",
     "@babel/register": "^7.10.4",
     "babel-preset-airbnb": "^4.0.1",
     "eslint": "^7.4.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
+    "nodemon": "^2.0.7",
     "sequelize-cli": "^6.2.0"
   },
   "engines": {
@@ -45,6 +48,7 @@
     "predev": "babel src --out-dir dist --copy-files --include-dotfiles",
     "dev": "DEBUG=vlibras-dictionary-*:* NODE_ENV=development node dist/index.js",
     "build": "babel src --out-dir dist --copy-files --include-dotfiles",
-    "production": "NODE_ENV=production node dist/index.js"
+    "production": "NODE_ENV=production node dist/index.js",
+    "start": "DEBUG=vlibras-dictionary-*:* NODE_ENV=development nodemon --exec babel-node src/index.js"
   }
 }
